--- a/Flickr_Recent/Base.lproj/Main.storyboard
+++ b/Flickr_Recent/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -13,28 +14,49 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="center" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="1.png" translatesAutoresizingMaskIntoConstraints="NO" id="jjz-Hw-rs2">
-                                <rect key="frame" x="0.0" y="96" width="320" height="320"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1.png" translatesAutoresizingMaskIntoConstraints="NO" id="jjz-Hw-rs2">
+                                <rect key="frame" x="16" y="86" width="568" height="366"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Flickr_Recent" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9m-Da-g4x">
-                                <rect key="frame" x="53" y="20" width="215" height="40"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flickr_Recent" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9m-Da-g4x">
+                                <rect key="frame" x="192" y="28" width="215" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="2sy-4R-CRV"/>
+                                    <constraint firstAttribute="width" constant="215" id="d63-U7-dKS"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Ec-fc-Z5U">
-                                <rect key="frame" x="20" y="430" width="280" height="65"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Ec-fc-Z5U">
+                                <rect key="frame" x="16" y="482" width="568" height="80"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="L3n-qH-43q"/>
+                                    <constraint firstAttribute="width" constant="568" id="OWc-ds-IFe"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.57637931421885491" green="0.62625996782471371" blue="0.66666666669999997" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="t9m-Da-g4x" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="8" symbolic="YES" id="Ihe-JZ-dmy"/>
+                            <constraint firstItem="3Ec-fc-Z5U" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="Nnh-oQ-KDY"/>
+                            <constraint firstItem="3Ec-fc-Z5U" firstAttribute="top" secondItem="jjz-Hw-rs2" secondAttribute="bottom" constant="30" id="QIf-Bb-l7S"/>
+                            <constraint firstItem="3Ec-fc-Z5U" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="QMC-jZ-gPJ"/>
+                            <constraint firstItem="jjz-Hw-rs2" firstAttribute="top" secondItem="t9m-Da-g4x" secondAttribute="bottom" constant="18" id="QdG-Vz-4Mv"/>
+                            <constraint firstItem="jjz-Hw-rs2" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="ZAS-yL-IVQ"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="3Ec-fc-Z5U" secondAttribute="bottom" constant="38" id="dDC-XS-UCH"/>
+                            <constraint firstItem="3Ec-fc-Z5U" firstAttribute="centerX" secondItem="t9m-Da-g4x" secondAttribute="centerX" id="dJD-5U-sT5"/>
+                            <constraint firstItem="3Ec-fc-Z5U" firstAttribute="centerX" secondItem="jjz-Hw-rs2" secondAttribute="centerX" id="dqP-Fa-e4l"/>
+                            <constraint firstItem="3Ec-fc-Z5U" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="exH-eD-vD1"/>
+                        </constraints>
                     </view>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="imgView" destination="jjz-Hw-rs2" id="9hv-na-G7E"/>
                         <outlet property="picTitle" destination="3Ec-fc-Z5U" id="uGQ-ub-vbM"/>
