--- a/Flickr_Recent/Base.lproj/Main.storyboard
+++ b/Flickr_Recent/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1.png" translatesAutoresizingMaskIntoConstraints="NO" id="jjz-Hw-rs2">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jjz-Hw-rs2">
                                 <rect key="frame" x="16" y="86" width="568" height="366"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </imageView>
@@ -67,7 +67,4 @@
             <point key="canvasLocation" x="164" y="222"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="1.png" width="300" height="168"/>
-    </resources>
 </document>
